<resources>
    <string name="app_name">MagicMirror</string>
    <string name="repeat_request">Повторить запрос</string>
    <string name="something_went_wrong">Что-то пошло не так :\'(</string>
    <string name="registration">Регистрация</string>
    <string name="entry">Вход</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="tmp_phone">Номер телефона</string>
    <string name="e_mail">E-mail</string>
    <string name="recover">Восстановить</string>
    <string name="manual">Мы отправим инструкцию\nпо восстановлению пароля\nна Ваш e-mail</string>
    <string name="enter_control_line">Введите контрольную строку\nкоторая пришла Вам на e-mail и\nсоздайте новый пароль </string>
    <string name="cancel">Отмена</string>
    <string name="recover_password">Восстановить пароль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="lbl_control_line">Контрольная строка</string>
    <string name="lbl_new_password">Новый пароль</string>
    <string name="lbl_repeat_password">Повторите пароль</string>
    <string name="send">Отправить</string>
    <string name="next">Далее</string>
    <string name="album">Альбом</string>
    <string name="most_beauty">Самые красивые</string>
    <string name="make_photo">Сделать фото</string>
    <string name="my_prophile">Мой профиль</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="user_name">Оксана Дугинова</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="tmp_dob">Дата рождения</string>
    <string name="tmp_city">Город</string>
    <string name="not_show_photo">Не показывать\nмои фото в рейтинге</string>
    <string name="save">Сохранить</string>
    <string name="exit_account">Выйти из учетной записи</string>
    <string name="lbl_password">Пароль</string>
    <string name="password_changed_success">Пароль успешно изменен!</string>
    <string name="tmp_rating">123456789</string>
    <string name="your_value">Ваша оценка красоты</string>
    <string name="you_occupy">Вы занимаете</string>
    <string name="place_in_rating">место в рейтинге по Москве</string>
    <string name="entry_facebook">или войти</string>
    <string name="phone_email_empty">Телефон или e-mail должны быть заполнены</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
</resources>
