<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/girl" />

    <EditText
        android:id="@+id/etName"
        style="@style/StandardEditText"
        android:layout_marginTop="@dimen/activity_middle_margin"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/etSurname"
        style="@style/StandardEditText"
        android:hint="@string/surname" />

    <EditText
        android:id="@+id/etDob"
        style="@style/StandardEditText"
        android:hint="@string/tmp_dob"
        android:inputType="number" />

    <EditText
        android:id="@+id/etCity"
        style="@style/StandardEditText"
        android:hint="@string/tmp_city"/>

    <EditText
        android:id="@+id/etEmail"
        style="@style/StandardEditText"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/StandardEditText"
        android:hint="@string/tmp_phone"
        android:inputType="phone|number" />

    <Switch
        android:id="@+id/Switch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_very_big_margin"
        android:checked="true"
        android:text="@string/not_show_photo"
        android:textColor="@color/gray_light" />

    <Button
        android:id="@+id/btnSave"
        style="@style/ButtonGray"
        android:layout_marginTop="@dimen/activity_very_big_margin"
        android:text="@string/save" />

    <TextView
        android:id="@+id/tvExitAccount"
        style="@style/PinkSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_big_margin"
        android:text="@string/exit_account"
        android:textAllCaps="true" />

</LinearLayout>

