<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/PinkBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration" />

    <EditText
        android:id="@+id/etName"
        style="@style/StandardEditText"
        android:layout_marginTop="@dimen/activity_middle_margin"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/etSurname"
        style="@style/StandardEditText"
        android:hint="@string/surname" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/StandardEditText"
        android:hint="@string/tmp_phone"
        android:inputType="phone|number" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/StandardEditText"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/StandardEditText"
        android:hint="●●●●●●●●●●●●●●●"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegistration"
        android:text="@string/registration"
        android:layout_marginTop="@dimen/activity_big_margin"
        style="@style/ButtonPink" />

    <TextView
        android:id="@+id/tvEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PinkSmall"
        android:text="@string/entry"
        android:layout_marginTop="@dimen/activity_big_margin"/>

</LinearLayout>

