<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ltRecovery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/PinkBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_big_margin"
            android:gravity="center_horizontal"
            android:text="@string/manual"
            android:textColor="@color/gray_light" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:layout_marginTop="@dimen/activity_middle_margin">

            <EditText
                android:id="@+id/etPhone"
                style="@style/StandardEditText"
                android:hint="@string/tmp_phone"
                android:inputType="phone|number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:layout_marginTop="@dimen/activity_middle_margin">

        <EditText
            android:id="@+id/etEmail"
            style="@style/StandardEditText"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRecover"
            style="@style/ButtonPink"
            android:layout_marginTop="@dimen/activity_very_big_margin"
            android:text="@string/recover" />

        <TextView
            android:id="@+id/tvCancel"
            style="@style/PinkSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_big_margin"
            android:text="@string/cancel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ltRecoveryControl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/PinkBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_big_margin"
            android:gravity="center_horizontal"
            android:text="@string/enter_control_line"
            android:textColor="@color/gray_light" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:layout_marginTop="@dimen/activity_middle_margin">

        <EditText
            android:id="@+id/etControl"
            style="@style/StandardEditText"
            android:hint="@string/lbl_control_line" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:layout_marginTop="@dimen/activity_middle_margin">

        <EditText
            android:id="@+id/etNewPassword"
            style="@style/StandardEditText"
            android:hint="@string/lbl_new_password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:layout_marginTop="@dimen/activity_middle_margin">

        <EditText
            android:id="@+id/etRepeatPassword"
            style="@style/StandardEditText"
            android:hint="@string/lbl_repeat_password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSend"
            style="@style/ButtonPink"
            android:layout_marginTop="@dimen/activity_very_big_margin"
            android:text="@string/send" />

        <TextView
            android:id="@+id/tvCancelRecovery"
            style="@style/PinkSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_big_margin"
            android:text="@string/cancel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ltRecoverySuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/PinkBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_password" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_super_big_margin"
            android:src="@drawable/slice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_middle_margin"
            android:text="@string/password_changed_success"
            android:textColor="@color/gray_light" />

        <Button
            android:id="@+id/btnNext"
            style="@style/ButtonPink"
            android:layout_marginTop="@dimen/activity_super_big_margin"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>




