<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/PinkBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/EditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/tmp_phone"
        android:inputType="phone|number" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/EditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="●●●●●●●●●●●●●●●"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEntry"
        style="@style/ButtonPink"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/activity_very_big_margin"
        android:text="@string/entry" />

    <TextView
        android:id="@+id/tvRegistration"
        style="@style/PinkSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_big_margin"
        android:text="@string/registration" />


    <TextView
        android:id="@+id/tvForgot"
        style="@style/GreySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_very_big_margin"
        android:text="@string/forgot_password" />

</LinearLayout>

