<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/photo_big"
            android:scaleType="centerCrop"
            android:src="@drawable/girl"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvName"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_big_margin"
            android:text="Оксана Дугинова"
            android:textColor="@color/colorPrimary" />

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_big_margin"
            android:text="@string/your_value" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_middle_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_small"
                android:adjustViewBounds="true"
                android:src="@drawable/heart_pink" />

            <TextView
                android:id="@+id/tvNumber"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_middle_margin"
                android:text="756"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <include layout="@layout/separate_line_long" />

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_big_margin"
            android:text="@string/you_occupy" />

        <TextView
            android:id="@+id/tvRating"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_middle_margin"
            android:text="@string/tmp_rating"
            android:textColor="@color/colorPrimary" />

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_middle_margin"
            android:layout_marginBottom="@dimen/activity_big_margin"
            android:text="@string/place_in_rating" />

    </LinearLayout>

</ScrollView>